tests/NormalTests/paczka1/fuzzy1/40614344.err
Error in line 14: uEn S585 84,5
Error in line 15: uEn S594 4,2
Error in line 13: teLNN6tg S585 2,6
